[project]
name = "f1racerating"
version = "0.1.0"
description = "Display F1 race ratings for recent races (thanks to RaceFans.net)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
